Crushed some bugs